Fix color contrast issue on some text

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -35,6 +35,7 @@
 a {
   color: #050000;
   transition: color ease-in-out 0.3s;
+  text-shadow: rgb(255, 238, 0) 1px 0 10px;
 }
 
 a i {
@@ -61,7 +62,7 @@ i {
   font-size: 1.6rem;
   padding: 7px;
   vertical-align: middle;
-  text-shadow: rgb(255, 200, 0) 1px 0 10px;
+  text-shadow: rgb(255, 238, 0) 1px 0 10px;
 }
 
 i:hover {
